# Forge_MCP

./: .editorconfig  .gitattributes  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  container.py  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/workflows/: ci.yml  installer-test.yml  release.yml
docs/: hexagonal-architecture.md
installer/: install.sh
installer/lib/: common.sh  mcp.sh  preflight.sh  python.sh  tui.sh  vscode.sh
prompts/: analyze_code.md  apply_issue.md  create_pr.md  decompose_function.md  explain_code.md  generate_changelog_entry.md  generate_docstrings.md  generate_module_doc.md  generate_test_fixtures.md  generate_unit_tests.md  modernize_python.md  progressive_commit.md  review_pr.md  scaffold_project.md  suggest_refactoring.md  suggest_test_cases.md  suggest_type_hints.md
tests/: conftest.py  test_container.py  test_prompt_loader.py  test_server.py
tools/: __init__.py  analyze_code.py  apply_issue.py  create_pr.py  decompose_function.py  explain_code.py  generate_changelog_entry.py  generate_docstrings.py  generate_module_doc.py  generate_test_fixtures.py  generate_unit_tests.py  modernize_python.py  progressive_commit.py  review_pr.py  scaffold_project.py  suggest_refactoring.py  suggest_test_cases.py  suggest_type_hints.py
utils/: __init__.py  prompt_loader.py
